--- a/site/index.html.haml
+++ b/site/index.html.haml
@@ -1,4 +1,7 @@
 ---
-page: landing
-layout: layout
+:page: landing
+:layout: layout
 ---
+%a#facebook-link(href="http://www.facebook.com/pages/SoundBYTES/319577237826")
+  %img.bw(src="/img/facebook-icon.png" alt="Facebook icon")
+  %img.color(src="/img/facebook-icon-color.png" alt="Facebook icon")
