--- a/site/people/amanda.sun/index.html.haml
+++ b/site/people/amanda.sun/index.html.haml
@@ -1,13 +1,14 @@
 ---
-page: person
-layout: layout
+:page: person
+:title: Amanda Sun
+:description: SoundBYTES bio for Amanda Sun.
+:layout: layout
 ---
 .person
   .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
     %h1(itemprop="name") Amanda Sun
     %p
-      Amanda Sun sings <span itemprop="role">soprano</span>. She is involved not just in singing, but also with
-      the UW Dance team and her church. She's been singing since she was 7.
+      Amanda (<span itemprop="title">Soprano</span>) has been singing since she was 7, and recently graduated from UW. Besides participating in <span itemprop="affiliation">SoundBYTES</span>, Amanda also is active in the university's dance team and her church. Her interests include makeup artistry, cheer, and youth group counseling. Amanda works as an entertainment company executive (despite her continuing love of Hanson), and hopes to have her company become a household name! 
 
 %nav#people
   %ul
@@ -20,9 +21,6 @@ layout: layout
     %li 
       %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
         .name Hannah Krajnik
-    %li
-      %a.face#harrison-wei-face(href="/people/harrison.wei/")
-        .name Harrison Wei
     %li
       %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
         .name Jeremie Wallis
