--- a/site/people/catherine.long/index.html.haml
+++ b/site/people/catherine.long/index.html.haml
@@ -1,12 +1,14 @@
 ---
-page: person
-layout: layout
+:page: person
+:title: Catherine Long
+:description: SoundBYTES bio for Catherine Long.
+:layout: layout
 ---
 .person
   .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
     %h1(itemprop="name") Catherine Long
     %p
-      Catherine Long sings <span itemprop="role">Tenor</span>.
+      Catherine Long sings <span itemprop="title">Tenor</span>, and is in her 3rd year at UW. Cat pursues Women's Studies as her major, and is a boxing, baking, and cake-decorating enthusiast. Despite her infatuation with Mr. Feeny from "Boy Meets World," Cat hopes to become a social worker in the near future. She has bungee jumped, lived abroad, and rocks a mohawk HARD.
 
 %nav#people
   %ul
@@ -19,9 +21,6 @@ layout: layout
     %li 
       %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
         .name Hannah Krajnik
-    %li
-      %a.face#harrison-wei-face(href="/people/harrison.wei/")
-        .name Harrison Wei
     %li
       %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
         .name Jeremie Wallis
