--- a/site/people/charlie.harper/index.html.haml
+++ b/site/people/charlie.harper/index.html.haml
@@ -1,12 +1,14 @@
 ---
-page: person
-layout: layout
+:page: person
+:title: Charlie Harper
+:description: SoundBYTES bio for Charlie Harper.
+:layout: layout
 ---
 .person
   .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
     %h1(itemprop="name") Charlie Harper
     %p
-      Charlie Harper sings <span itemprop="role">Soprano</span>. She has been singing since she was 14. Has
+      Charlie Harper sings <span itemprop="title">Alto</span>. She has been singing since she was 14. Has
       been involved in theater and dance her entire life. She is currently a
       Senior Art Student at UW.
 
@@ -21,9 +23,6 @@ layout: layout
     %li 
       %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
         .name Hannah Krajnik
-    %li
-      %a.face#harrison-wei-face(href="/people/harrison.wei/")
-        .name Harrison Wei
     %li
       %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
         .name Jeremie Wallis
