--- a/site/people/hannah.krajnik/index.html.haml
+++ b/site/people/hannah.krajnik/index.html.haml
@@ -1,12 +1,14 @@
 ---
-page: person
-layout: layout
+:page: person
+:title: Hannah Krajnik
+:description: SoundBYTES bio for Hannah Krajnik.
+:layout: layout
 ---
 .person
   .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
     %h1(itemprop="name") Hannah Krajnik
     %p
-      Hannah Krajnik sings <span itemprop="role">Soprano</span>.
+      Hannah Krajnik (<span itemprop="title">Soprano</span>) is a sophomore at UW. She is double majoring in Psychology and Creative Writing, and hopes to publish her own work in the near future. Hannah also harbors an intense obsession with Lord of the Rings, and hopes to travel extensively after college (probably to New Zealand). Her commitment and outgoing nature bring a fun, focused element to every rehearsal!
 
 %nav#people
   %ul
@@ -19,9 +21,6 @@ layout: layout
     %li 
       %a.face.current#hannah-krajnik-face(href="/people/hannah.krajnik/")
         .name Hannah Krajnik
-    %li
-      %a.face#harrison-wei-face(href="/people/harrison.wei/")
-        .name Harrison Wei
     %li
       %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
         .name Jeremie Wallis
