--- a/site/people/index.html.haml
+++ b/site/people/index.html.haml
@@ -1,6 +1,8 @@
 ---
-page: people
-layout: layout
+:page: people
+:title: People
+:description: The current members of Seattle SoundBYTES.
+:layout: layout
 ---
 %nav#people
   %ul
@@ -13,9 +15,6 @@ layout: layout
     %li 
       %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
         .name Hannah Krajnik
-    %li
-      %a.face#harrison-wei-face(href="/people/harrison.wei/")
-        .name Harrison Wei
     %li
       %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
         .name Jeremie Wallis
