--- a/site/people/jeremie.wallis/index.html.haml
+++ b/site/people/jeremie.wallis/index.html.haml
@@ -1,15 +1,14 @@
 ---
-page: person
-layout: layout
+:page: person
+:title: Jeremie Wallis
+:description: SoundBYTES bio for Jeremie Wallis.
+:layout: layout
 ---
 .person
   .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
     %h1(itemprop="name") Jeremie Wallis
     %p
-      Jeremie Wallis sings <span itemprop="role">Baritone</span>. He's been singing since his first competition
-      at age 3. He's been in choirs for 20 years, singing a cappella for 5 years.
-      Before <span itemprop="organization">SoundBYTES</span>, Jeremie served as director of Unleashed! A Cappella. He
-      also arranges and works as backup vocal percussion.
+      Jeremie Wallis (<span itemprop="title">Baritone</span>) has been singing since his first competition at age 3. He's been in choirs for 20 years, singing a cappella for 5 years. Before SoundBYTES, Jeremie served as director of Unleashed! A Cappella. He plans to return to school in the near future, most likely to study Broadcast Journalism. Besides celebrating his epic "80s sex symbol" hairstyle, Jer enjoys videogames, royal blue, and the stylings of Weird Al Yankovic.
 
 %nav#people
   %ul
@@ -22,9 +21,6 @@ layout: layout
     %li 
       %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
         .name Hannah Krajnik
-    %li
-      %a.face#harrison-wei-face(href="/people/harrison.wei/")
-        .name Harrison Wei
     %li
       %a.face.current#jeremie-wallis-face(href="/people/jeremie.wallis/")
         .name Jeremie Wallis
