--- a/site/people/natalie.karbelnig/index.html.haml
+++ b/site/people/natalie.karbelnig/index.html.haml
@@ -1,13 +1,14 @@
 ---
-page: person
-layout: layout
+:page: person
+:title: Natalie Karbelnig
+:description: SoundBYTES bio for Natalie Karbelnig.
+:layout: layout
 ---
 .person
   .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
     %h1(itemprop="name") Natalie Karbelnig
     %p
-      Natalie Karbelnig sings <span itemprop="role">Alto</span>.
-
+      Natalie Karbelnig (<span itemprop="title">Soprano</span>) studies Art History, and is a junior at UW. She enjoys writing, literature, playing her ukulele, and contemporary photography. Natalie hopes to figure out where she belongs in the art world, and may pursue architecture as a grad student. She also wrote these bios!!
 %nav#people
   %ul
     %li
@@ -19,9 +20,6 @@ layout: layout
     %li 
       %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
         .name Hannah Krajnik
-    %li
-      %a.face#harrison-wei-face(href="/people/harrison.wei/")
-        .name Harrison Wei
     %li
       %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
         .name Jeremie Wallis
