--- a/site/people/revathi.murthy/index.html.haml
+++ b/site/people/revathi.murthy/index.html.haml
@@ -1,12 +1,14 @@
 ---
-page: person
-layout: layout
+:page: person
+:title: Revathi Murthy
+:description: SoundBYTES bio for Revathi Murthy.
+:layout: layout
 ---
 .person
   .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
     %h1(itemprop="name") Revathi Murthy
     %p
-      Revathi Murthy sings <span itemprop="role">Alto</span>.
+      Revathi Murthy (<span itemprop="title">Alto/Tenor</span>) is studying bioengineering and electrical engineering, and will be graduating in June. Outside of her math/science major, Revathi participates extensively in the arts. She sings in the band, The Amitabhs and recently kicked ass in The Vagina Monologues! She hopes to achieve something groundbreaking for medicine (preferably while wearing her uber comfortable "funky pants").
 
 %nav#people
   %ul
@@ -19,9 +21,6 @@ layout: layout
     %li 
       %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
         .name Hannah Krajnik
-    %li
-      %a.face#harrison-wei-face(href="/people/harrison.wei/")
-        .name Harrison Wei
     %li
       %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
         .name Jeremie Wallis
