--- a/site/people/sean.anastasi/index.html.haml
+++ b/site/people/sean.anastasi/index.html.haml
@@ -1,14 +1,14 @@
 ---
-page: person
-layout: layout
+:page: person
+:title: Sean Anastasi
+:description: SoundBYTES bio for Sean Anastasi.
+:layout: layout
 ---
 .person
   .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
-    %h1 Sean Anastasi
-    %p(itemprop="name")
-      Sean Anastasi sings <span itemprop="role">Baritone and Bass</span>, as well as serving as the group&apos;s
-      technical coordinator. He has been singing since elementary school with 4
-      years of a cappella experience.
+    %h1(itemprop="name") Sean Anastasi
+    %p
+      Sean Anastasi (<span itemprop="title">Baritone/Bass</span>) works as a Software Developer, and graduated from UW in 2010. An avid reader, Sean still makes time for extreme biking and website building. When asked his favorite color, Sean will respond with "#3e4f60" which is supposedly blue-gray-green (computer science...). As the bass of the group, Sean is our rock!
 
 %nav#people
   %ul
@@ -21,9 +21,6 @@ layout: layout
     %li 
       %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
         .name Hannah Krajnik
-    %li
-      %a.face#harrison-wei-face(href="/people/harrison.wei/")
-        .name Harrison Wei
     %li
       %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
         .name Jeremie Wallis
