--- a/site/performances/index.html.haml
+++ b/site/performances/index.html.haml
@@ -1,24 +1,32 @@
 ---
-page: performances
-layout: layout
+:page: performances
+:title: Performances
+:description: Upcoming performances for SoundBYTES.
+:layout: layout
 ---
 %section#performances
   %h1 Upcoming Performances
 
-  %section
-    %time(datetime="2011-04-16T18:00:00 -08:00") April 16th, 6pm
+  %section(itemscope itemtype="http://data-vocabulary.org/Event")
+    %time(itemprop="startDate" datetime="2011-04-16T18:00:00 -08:00") April 16th, 6pm
     .description
-      %p White Center Art Walk
+      %p 
+        %a(href="http://www.facebook.com/pages/314-Bakery/101011049943641" itemprop="url")
+          <span itemprop="summary">Performance at the <span itemprop="location">3.14 Bakery</span></span>
 
-  %section
-    %time(datetime="2011-05-14T19:00:00 -08:00") May 14th, 7pm-9pm
+  %section(itemscope itemtype="http://data-vocabulary.org/Event")
+    %time(itemprop="startDate" datetime="2011-05-14T19:00:00 -08:00") May 14th, 7pm-9pm
     .description
-      %h2 SoundBYTES <em>Amazing Technicolor DreamShow!</em> (working title)
-      %p
-        %a(href="http://www.brownpapertickets.com/event/162512") Tickets available March 1st
+      %h2(itemprop="summary") SoundBYTES <em>The Perfect Size For AWESOME!</em>
+      %p(itemprop="description")
+        Come see us at the <span itemprop="location">Renton Civic Theater</span>!<br />
+        %a(href="http://www.brownpapertickets.com/event/162512" itemprop="url") Tickets available NOW!
+        
+      %p The event you've been waiting for! Seattle SoundBYTES in their first full length concert, complete with singing, dancing and special guests. Bring your friends and family to this all ages show. Featuring songs from Heart, Queen, and much much more! We will also be holding a raffle during the show to support Children's Hospital of Seattle.
 
-  %section
-    %time(datetime="2011-05-21") May 21st
+  %section(itemscope itemtype="http://data-vocabulary.org/Event")
+    %time(itemprop="startDate" datetime="2011-05-21") May 21st
     .description
       %p
-        %a(href="http://www.relayforlife.org/") Relay For Life
+        %a(href="http://www.relayforlife.org/" itemprop="url")
+          <span itemprop="summary">Relay For Life</span>
