--- a/site/index.html.haml
+++ b/site/index.html.haml
@@ -1,7 +1,61 @@
 ---
 :page: landing
 :layout: layout
+:title:
+:description:
+  SoundBYTES is the newest Seattle A Cappella sensation, bringing hits of yesterday
+  and today in ways you've never heard before. Sprinkle in lame humor and a bit of
+  dancing and you have an entertaining thrill ride to tell your friends about.
 ---
-%a#facebook-link(href="http://www.facebook.com/pages/SoundBYTES/319577237826")
-  %img.bw(src="/img/facebook-icon.png" alt="Facebook icon")
-  %img.color(src="/img/facebook-icon-color.png" alt="Facebook icon")
+.background
+  #ambar-choudhury(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Vocal Percussion / Bass
+    %a.face.visible(href="/people/ambar.choudhury/")
+      .name(itemprop="name") Ambar Choudhury
+  #amanda-sun(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Soprano
+    %a.face.visible(href="/people/amanda.sun/")
+      .name(itemprop="name") Amanda Sun
+  #natalie-karbelnig(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Soprano
+    %a.face.visible(href="/people/natalie.karbelnig/")
+      .name(itemprop="name") Natalie Karbelnig
+  #jeremie-wallis(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Baritone
+    %a.face.visible(href="/people/jeremie.wallis/")
+      .name(itemprop="name") Jeremie Wallis
+  #revathi-murthy(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Alto / Tenor
+    %a.face.visible(href="/people/revathi.murthy/")
+      .name(itemprop="name") Revathi Murthy
+  #charlie-harper(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Alto
+    %a.face.visible(href="/people/charlie.harper/")
+      .name(itemprop="name") Charlie Harper
+  #catherine-long(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Tenor
+    %a.face.visible(href="/people/catherine.long/")
+      .name(itemprop="name") Catherine Long
+  #sean-anastasi(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;")Baritone / Bass
+    %a.face.visible(href="/people/sean.anastasi/")
+      .name(itemprop="name") Sean Anastasi
+  #hannah-krajnik(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Soprano
+    %a.face.visible(href="/people/hannah.krajnik/")
+      .name(itemprop="name") Hannah Krajnik
+      
+#album-link
+  %h2 Buy our new single on <span class="cdbaby">CDBaby</span>!
+  .buybutton
+    %a(href="http://www.cdbaby.com/cd/seattlesoundbytes1")
+      %img(src='http://images.CDBaby.name/s/e/seattlesoundbytes1_small.jpg' alt='Seattle Soundbytes: Desert Rose / Satrangi Re')
