--- a/site/people/amanda.sun/index.html.haml
+++ b/site/people/amanda.sun/index.html.haml
@@ -4,35 +4,18 @@
 :description: SoundBYTES bio for Amanda Sun.
 :layout: layout
 ---
-.person
-  .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
-    %h1(itemprop="name") Amanda Sun
+.person#amanda(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+  .collage
+    %img#headshot(src="/img/members/amanda.jpg")
+  %h1(itemprop="name") Amanda Sun
+  .bio
     %p
-      Amanda (<span itemprop="title">Soprano</span>) has been singing since she was 7, and recently graduated from UW. Besides participating in <span itemprop="affiliation">SoundBYTES</span>, Amanda also is active in the university's dance team and her church. Her interests include makeup artistry, cheer, and youth group counseling. Amanda works as an entertainment company executive (despite her continuing love of Hanson), and hopes to have her company become a household name! 
+      Amanda (<span class="part" itemprop="title">Soprano</span>) has been singing since she
+      was 7, and recently graduated from UW. Besides participating in
+      <span itemprop="affiliation">SoundBYTES</span>, Amanda also is active in
+      the university's dance team and her church. Her interests include makeup
+      artistry, cheer, and youth group counseling. Amanda works as an entertainment
+      company executive (despite her continuing love of Hanson), and hopes to have
+      her company become a household name! 
 
-%nav#people
-  %ul
-    %li
-      %a.face.current#amanda-sun-face(href="/people/amanda.sun/")
-        .name Amanda Sun
-    %li
-      %a.face#charlie-harper-face(href="/people/charlie.harper/")
-        .name Charlie Harper
-    %li 
-      %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
-        .name Hannah Krajnik
-    %li
-      %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
-        .name Jeremie Wallis
-    %li
-      %a.face#natalie-karbelnig-face(href="/people/natalie.karbelnig/")
-        .name Natalie Karbelnig
-    %li
-      %a.face#catherine-long-face(href="/people/catherine.long/")
-        .name Catherine Long
-    %li
-      %a.face#revathi-murthy-face(href="/people/revathi.murthy/")
-        .name Revathi Murthy
-    %li
-      %a.face#sean-anastasi-face(href="/people/sean.anastasi/")
-        .name Sean Anastasi
+%a#back-link(href="/people/") ← Back to People
