--- a/site/people/charlie.harper/index.html.haml
+++ b/site/people/charlie.harper/index.html.haml
@@ -4,37 +4,15 @@
 :description: SoundBYTES bio for Charlie Harper.
 :layout: layout
 ---
-.person
-  .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
-    %h1(itemprop="name") Charlie Harper
+.person#charlie(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+  .collage
+    %img#headshot(src="/img/members/charlie.jpg")
+  %h1(itemprop="name") Charlie Harper
+  %span(itemprop="affiliation" style="display:none;") SoundBYTES
+  .bio
     %p
-      Charlie Harper sings <span itemprop="title">Alto</span>. She has been singing since she was 14. Has
+      Charlie Harper sings <span class="part" itemprop="title">Alto</span>. She has been singing since she was 14. Has
       been involved in theater and dance her entire life. She is currently a
       Senior Art Student at UW.
 
-%nav#people
-  %ul
-    %li
-      %a.face#amanda-sun-face(href="/people/amanda.sun/")
-        .name Amanda Sun
-    %li
-      %a.face.current#charlie-harper-face(href="/people/charlie.harper/")
-        .name Charlie Harper
-    %li 
-      %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
-        .name Hannah Krajnik
-    %li
-      %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
-        .name Jeremie Wallis
-    %li
-      %a.face#natalie-karbelnig-face(href="/people/natalie.karbelnig/")
-        .name Natalie Karbelnig
-    %li
-      %a.face#catherine-long-face(href="/people/catherine.long/")
-        .name Catherine Long
-    %li
-      %a.face#revathi-murthy-face(href="/people/revathi.murthy/")
-        .name Revathi Murthy
-    %li
-      %a.face#sean-anastasi-face(href="/people/sean.anastasi/")
-        .name Sean Anastasi
+%a#back-link(href="/people/") ← Back to People
