--- a/site/people/hannah.krajnik/index.html.haml
+++ b/site/people/hannah.krajnik/index.html.haml
@@ -4,35 +4,18 @@
 :description: SoundBYTES bio for Hannah Krajnik.
 :layout: layout
 ---
-.person
-  .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
-    %h1(itemprop="name") Hannah Krajnik
+.person#hannah(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+  .collage
+    %img#headshot(src="/img/members/hannah.jpg")
+  %h1(itemprop="name") Hannah Krajnik
+  %span(itemprop="affiliation" style="display:none;") SoundBYTES
+  .bio
     %p
-      Hannah Krajnik (<span itemprop="title">Soprano</span>) is a sophomore at UW. She is double majoring in Psychology and Creative Writing, and hopes to publish her own work in the near future. Hannah also harbors an intense obsession with Lord of the Rings, and hopes to travel extensively after college (probably to New Zealand). Her commitment and outgoing nature bring a fun, focused element to every rehearsal!
+      Hannah Krajnik (<span itemprop="title">Soprano</span>) is a sophomore at UW.
+      She is double majoring in Psychology and Creative Writing, and hopes to publish
+      her own work in the near future. Hannah also harbors an intense obsession
+      with Lord of the Rings, and hopes to travel extensively after college
+      (probably to New Zealand). Her commitment and outgoing nature bring a fun,
+      focused element to every rehearsal!
 
-%nav#people
-  %ul
-    %li
-      %a.face#amanda-sun-face(href="/people/amanda.sun/")
-        .name Amanda Sun
-    %li
-      %a.face#charlie-harper-face(href="/people/charlie.harper/")
-        .name Charlie Harper
-    %li 
-      %a.face.current#hannah-krajnik-face(href="/people/hannah.krajnik/")
-        .name Hannah Krajnik
-    %li
-      %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
-        .name Jeremie Wallis
-    %li
-      %a.face#natalie-karbelnig-face(href="/people/natalie.karbelnig/")
-        .name Natalie Karbelnig
-    %li
-      %a.face#catherine-long-face(href="/people/catherine.long/")
-        .name Catherine Long
-    %li
-      %a.face#revathi-murthy-face(href="/people/revathi.murthy/")
-        .name Revathi Murthy
-    %li
-      %a.face#sean-anastasi-face(href="/people/sean.anastasi/")
-        .name Sean Anastasi
+%a#back-link(href="/people/") ← Back to People
