--- a/site/people/index.html.haml
+++ b/site/people/index.html.haml
@@ -1,32 +1,52 @@
 ---
-:page: people
+:page:  people
 :title: People
 :description: The current members of Seattle SoundBYTES.
 :layout: layout
 ---
-%nav#people
-  %ul
-    %li
-      %a.face#amanda-sun-face(href="/people/amanda.sun/")
-        .name Amanda Sun
-    %li
-      %a.face#charlie-harper-face(href="/people/charlie.harper/")
-        .name Charlie Harper
-    %li 
-      %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
-        .name Hannah Krajnik
-    %li
-      %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
-        .name Jeremie Wallis
-    %li
-      %a.face#natalie-karbelnig-face(href="/people/natalie.karbelnig/")
-        .name Natalie Karbelnig
-    %li
-      %a.face#catherine-long-face(href="/people/catherine.long/")
-        .name Catherine Long
-    %li
-      %a.face#revathi-murthy-face(href="/people/revathi.murthy/")
-        .name Revathi Murthy
-    %li
-      %a.face#sean-anastasi-face(href="/people/sean.anastasi/")
-        .name Sean Anastasi
+.background
+  #ambar-choudhury(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Vocal Percussion / Bass
+    %a.face.visible(href="/people/ambar.choudhury/")
+      .name(itemprop="name") Ambar Choudhury
+  #amanda-sun(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Soprano
+    %a.face.visible(href="/people/amanda.sun/")
+      .name(itemprop="name") Amanda Sun
+  #natalie-karbelnig(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Soprano
+    %a.face.visible(href="/people/natalie.karbelnig/")
+      .name(itemprop="name") Natalie Karbelnig
+  #jeremie-wallis(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Baritone
+    %a.face.visible(href="/people/jeremie.wallis/")
+      .name(itemprop="name") Jeremie Wallis
+  #revathi-murthy(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Alto / Tenor
+    %a.face.visible(href="/people/revathi.murthy/")
+      .name(itemprop="name") Revathi Murthy
+  #charlie-harper(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Alto
+    %a.face.visible(href="/people/charlie.harper/")
+      .name(itemprop="name") Charlie Harper
+  #catherine-long(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Tenor
+    %a.face.visible(href="/people/catherine.long/")
+      .name(itemprop="name") Catherine Long
+  #sean-anastasi(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;")Baritone / Bass
+    %a.face.visible(href="/people/sean.anastasi/")
+      .name(itemprop="name") Sean Anastasi
+  #hannah-krajnik(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+    %span(itemprop="affiliation" style="display:none;") SoundBYTES
+    %span(itemprop="title" style="display:none;") Soprano
+    %a.face.visible(href="/people/hannah.krajnik/")
+      .name(itemprop="name") Hannah Krajnik
