--- a/site/people/jeremie.wallis/index.html.haml
+++ b/site/people/jeremie.wallis/index.html.haml
@@ -4,35 +4,19 @@
 :description: SoundBYTES bio for Jeremie Wallis.
 :layout: layout
 ---
-.person
-  .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
-    %h1(itemprop="name") Jeremie Wallis
+.person#jeremie(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+  .collage
+    %img#headshot(src="/img/members/jeremie.jpg")
+  %h1(itemprop="name") Jeremie Wallis
+  %span(itemprop="affiliation" style="display:none;") SoundBYTES
+  .bio
     %p
-      Jeremie Wallis (<span itemprop="title">Baritone</span>) has been singing since his first competition at age 3. He's been in choirs for 20 years, singing a cappella for 5 years. Before SoundBYTES, Jeremie served as director of Unleashed! A Cappella. He plans to return to school in the near future, most likely to study Broadcast Journalism. Besides celebrating his epic "80s sex symbol" hairstyle, Jer enjoys videogames, royal blue, and the stylings of Weird Al Yankovic.
+      Jeremie Wallis (<span class="part"  itemprop="title">Baritone</span>) has been singing
+      since his first competition at age 3. He's been in choirs for 20 years,
+      singing a cappella for 5 years. Before SoundBYTES, Jeremie served as
+      director of Unleashed! A Cappella. He plans to return to school in the
+      near future, most likely to study Broadcast Journalism. Besides celebrating
+      his epic "80s sex symbol" hairstyle, Jer enjoys videogames, royal blue,
+      and the stylings of Weird Al Yankovic.
 
-%nav#people
-  %ul
-    %li
-      %a.face#amanda-sun-face(href="/people/amanda.sun/")
-        .name Amanda Sun
-    %li
-      %a.face#charlie-harper-face(href="/people/charlie.harper/")
-        .name Charlie Harper
-    %li 
-      %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
-        .name Hannah Krajnik
-    %li
-      %a.face.current#jeremie-wallis-face(href="/people/jeremie.wallis/")
-        .name Jeremie Wallis
-    %li
-      %a.face#natalie-karbelnig-face(href="/people/natalie.karbelnig/")
-        .name Natalie Karbelnig
-    %li
-      %a.face#catherine-long-face(href="/people/catherine.long/")
-        .name Catherine Long
-    %li
-      %a.face#revathi-murthy-face(href="/people/revathi.murthy/")
-        .name Revathi Murthy
-    %li
-      %a.face#sean-anastasi-face(href="/people/sean.anastasi/")
-        .name Sean Anastasi
+%a#back-link(href="/people/") ← Back to People
