--- a/site/people/revathi.murthy/index.html.haml
+++ b/site/people/revathi.murthy/index.html.haml
@@ -4,35 +4,18 @@
 :description: SoundBYTES bio for Revathi Murthy.
 :layout: layout
 ---
-.person
-  .bio(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
-    %h1(itemprop="name") Revathi Murthy
+.person#revathi(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
+  .collage
+    %img#headshot(src="/img/members/revathi.jpg")
+  %h1(itemprop="name") Revathi Murthy
+  %span(itemprop="affiliation" style="display:none;") SoundBYTES
+  .bio
     %p
-      Revathi Murthy (<span itemprop="title">Alto/Tenor</span>) is studying bioengineering and electrical engineering, and will be graduating in June. Outside of her math/science major, Revathi participates extensively in the arts. She sings in the band, The Amitabhs and recently kicked ass in The Vagina Monologues! She hopes to achieve something groundbreaking for medicine (preferably while wearing her uber comfortable "funky pants").
+      Revathi Murthy (<span class="part" itemprop="title">Alto/Tenor</span>) is studying
+      bioengineering and electrical engineering, and will be graduating in June.
+      Outside of her math/science major, Revathi participates extensively in the
+      arts. She sings in the band, The Amitabhs and enjoys composing arrangements
+      for SoundBytes. She hopes to achieve something groundbreaking for
+      medicine (preferably while wearing her uber comfortable "funky pants").
 
-%nav#people
-  %ul
-    %li
-      %a.face#amanda-sun-face(href="/people/amanda.sun/")
-        .name Amanda Sun
-    %li
-      %a.face#charlie-harper-face(href="/people/charlie.harper/")
-        .name Charlie Harper
-    %li 
-      %a.face#hannah-krajnik-face(href="/people/hannah.krajnik/")
-        .name Hannah Krajnik
-    %li
-      %a.face#jeremie-wallis-face(href="/people/jeremie.wallis/")
-        .name Jeremie Wallis
-    %li
-      %a.face#natalie-karbelnig-face(href="/people/natalie.karbelnig/")
-        .name Natalie Karbelnig
-    %li
-      %a.face#catherine-long-face(href="/people/catherine.long/")
-        .name Catherine Long
-    %li
-      %a.face.current#revathi-murthy-face(href="/people/revathi.murthy/")
-        .name Revathi Murthy
-    %li
-      %a.face#sean-anastasi-face(href="/people/sean.anastasi/")
-        .name Sean Anastasi
+%a#back-link(href="/people/") ← Back to People
